--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "watchify": "^3.9.0"
   },
   "dependencies": {
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "svg.js": "^2.6.3"
   }
 }
